@@ -1,3 +1,7 @@
+When halting the VM, don't quit as soon as the text "halted" is seen,
+because it may be part the message "halted by root", which is printed
+before disks have been synced.  Instead look for "The operating system
+has halted", EOF, or a timeout.
 
 - 1.37 released -
 
